@startuml ScholarMetric_ERD
hide circle
skinparam linetype ortho

title Scholar Metric — Entity Relationship Diagram

entity "universities" as universities {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
  domain : VARCHAR <<UK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
  email : VARCHAR <<UK>>
  password : VARCHAR
  role : VARCHAR
  department : VARCHAR
  admin_id : VARCHAR
  access_level : VARCHAR
  university_id : BIGINT <<FK>>
  created_by : BIGINT <<FK>>
  is_active : BOOLEAN
  password_change_required : BOOLEAN
  avatar : VARCHAR
  phone : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "courses" as courses {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR
  code : VARCHAR
  semester : VARCHAR
  credit_hours : INT
  department : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "course_user" as course_user {
  * id : BIGINT <<PK>>
  --
  course_id : BIGINT <<FK>>
  user_id : BIGINT <<FK>>
  term : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "evaluations" as evaluations {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR
  semester : VARCHAR
  evaluation_type : VARCHAR
  start_date : DATE
  end_date : DATE
  status : VARCHAR
  is_anonymous : BOOLEAN
  allow_faculty_response : BOOLEAN
  send_reminder : BOOLEAN
  created_by : BIGINT <<FK>>
  activated_at : DATETIME
  closed_at : DATETIME
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "evaluation_faculty" as eval_faculty {
  * id : BIGINT <<PK>>
  --
  evaluation_id : BIGINT <<FK>>
  faculty_id : BIGINT <<FK>>
}

entity "evaluation_courses" as eval_courses {
  * id : BIGINT <<PK>>
  --
  evaluation_id : BIGINT <<FK>>
  faculty_id : BIGINT <<FK>>
  course_id : BIGINT <<FK>>
}

entity "feedback_tokens" as tokens {
  * id : BIGINT <<PK>>
  --
  evaluation_id : BIGINT <<FK>>
  student_id : BIGINT <<FK>>
  faculty_id : BIGINT <<FK>>
  course_id : BIGINT <<FK>>
  token : UUID <<UK>>
  is_used : BOOLEAN
  used_at : DATETIME
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "feedbacks" as feedbacks {
  * id : BIGINT <<PK>>
  --
  evaluation_id : BIGINT <<FK>>
  faculty_id : BIGINT <<FK>>
  course_id : BIGINT <<FK>>
  submitted_at : DATETIME
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "feedback_answers" as answers {
  * id : BIGINT <<PK>>
  --
  feedback_id : BIGINT <<FK>>
  question_id : VARCHAR
  rating : DECIMAL
  text_answer : TEXT
  moderation_status : VARCHAR
  toxicity_score : DECIMAL
  moderation_reason : TEXT
  moderation_categories : JSON
  original_comment : TEXT
  cleaned_comment : TEXT
  moderated_at : DATETIME
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

universities ||--o{ users : has
users ||--o{ users : created_by
users ||--o{ course_user
courses ||--o{ course_user
evaluations ||--o{ eval_faculty
users ||--o{ eval_faculty : faculty
evaluations ||--o{ eval_courses
courses ||--o{ eval_courses
users ||--o{ eval_courses : faculty
evaluations ||--o{ tokens
users ||--o{ tokens : student
users ||--o{ tokens : faculty
courses ||--o{ tokens
evaluations ||--o{ feedbacks
users ||--o{ feedbacks : faculty
courses ||--o{ feedbacks
feedbacks ||--|{ answers

note right of feedbacks
  No student_id stored.
  Anonymity preserved.
end note

note bottom of evaluations
  Status: draft → scheduled
  → active → closed → archived
  Only one scheduled/active at a time.
end note

@enduml
